Updates to logic and values for appeal type / appeal is

--- a/app/views/appeal/before-you-start/index.html
+++ b/app/views/appeal/before-you-start/index.html
@@ -39,7 +39,7 @@
 
       <ul class="govuk-list govuk-list--bullet">
         <li>
-          routing for expedited appeal
+          routing for expedited appeal and CAS & advert appeals
         </li>
         <li>
           flipped routing logic for enforcement question so you can skip through with continue (no option selected)
