--- a/app/views/appeal/before-you-start/v19/planning/decision-date.html
+++ b/app/views/appeal/before-you-start/v19/planning/decision-date.html
@@ -10,7 +10,7 @@
 {% block questions %}
 
   <!-- <p class="govuk-body-l">
-    Appeal type {{ data['appealType'] }}
+    Appeal type {{ data['appealIs'] }}
   </p> -->
 
   <span class="govuk-caption-l">
