Updated 'appeal type' values to match BO

--- a/app/views/_includes/lpa/current-appeals.html
+++ b/app/views/_includes/lpa/current-appeals.html
@@ -46,7 +46,7 @@
           html: 'Spital House, Lensfield Rd, Cambridge CB2 1ER'
         },
         {
-          html: 'S78'
+          html: 'Householder'
         },
         {
           html: '1' | daysAgo
@@ -69,7 +69,7 @@
           html: 'Haggis Farm Cottage, Cambridge Rd, Barton, Cambridge CB23 7AT'
         },
         {
-          html: 'S78'
+          html: 'Planning'
         },
         {
           html: '3' | daysInFuture
@@ -92,7 +92,7 @@
           html: '20 Bermuda Rd, Arbury, Cambridge CB4 3JX'
         },
         {
-          html: 'S78'
+          html: 'Planned listed building and conservation area'
         },
         {
           html: '4' | daysInFuture
@@ -114,7 +114,7 @@
           html: 'Canterbury House, Weavely, Cambridge CB2 1PT'
         },
         {
-          html: 'HAS'
+          html: 'Advertisement'
         },
         {
           html: '6' | daysInFuture
@@ -137,7 +137,7 @@
           html: '22 London Rd, Six Mile Bottom, Newmarket CB8 0UE'
         },
         {
-          html: 'S78'
+          html: 'Commercial planning (CAS)'
         },
         {
           html: '6' | daysInFuture
@@ -160,7 +160,7 @@
           html: 'Five Trees Garden, Cambridge CB4 1UA'
         },
         {
-          html: 'S39'
+          html: 'Commercial advertisement (CAS)'
         },
         {
           html: '16' | daysInFuture
@@ -182,7 +182,7 @@
           html: '64 Rene Court, Coldham’s Rd, Cambridge CB1 3EW'
         },
         {
-          html: 'S20'
+          html: 'Planned listed building and conservation area'
         },
         {
           html: '22' | daysInFuture
@@ -204,7 +204,7 @@
           html: 'Fripple Court Lane, Fenns Avenue, Fripple, Cambridge CB22 1TP'
         },
         {
-          html: 'S78'
+          html: 'Planning'
         },
         {
           html: '33' | daysInFuture
@@ -226,7 +226,7 @@
           html: 'Haggis Farm Cottage, Cambridge Rd, Barton, Cambridge CB23 7AT'
         },
         {
-          html: 'S78'
+          html: 'Planning'
         },
         {
           html: '33' | daysInFuture
@@ -249,7 +249,7 @@
           html: 'The Old Library, 2 Wheeler St, Cambridge CB2 3QB'
         },
         {
-          html: 'S78'
+          html: 'Planning'
         },
         {
 
@@ -270,7 +270,7 @@
           html: 'Unnamed Road, Cambridge CB2 1PZ'
         },
         {
-          html: 'S174'
+          html: 'Advertisement'
         },
         {
 
