Additions to Before you start to link up the logic for S78E (expedited appeal)

--- a/app/views/appeal/before-you-start/v19/planning/cya.html
+++ b/app/views/appeal/before-you-start/v19/planning/cya.html
@@ -59,7 +59,7 @@
           text: 'What type of application is your appeal about?'
         },
         value: {
-          text: data['appeal-type'] or 'Full planning'
+          text: data['planning-type'] or 'Full planning'
         },
         actions: {
           items: [
