--- a/app/views/index.html
+++ b/app/views/index.html
@@ -77,22 +77,25 @@
           <a href="/appeal/has/">Householder</a>
         </li>
         <li>
-          <a href="/appeal/full/">Full planning</a>
+          <a href="/appeal/full/">Full planning (S78)</a>
         </li>
         <li>
-          <a href="/appeal/cas-adverts/">CAS and adverts</a>
-        </li>
-        <li>
-          <a href="/appeal/final-comments/">Final comments for full planning</a>
+          <a href="/appeal/final-comments/">Final comments for full planning (S78)</a>
         </li>
         <li>
           <a href="/appeal/lbc/">Listed building consent</a>
+        </li>
+        <li>
+          <a href="/appeal/cas-adverts/">CAS and adverts</a>
         </li>
         <li>
           Enforcement (needs review)
         </li>
         <li>
           <a href="/appeal/ldc/">Lawful development certificate</a>
+        </li>
+        <li>
+          <a href="/appeal/s78e/">Simplified full planning (S78E)</a>
         </li>
       </ul>
 
