--- a/app/views/index.html
+++ b/app/views/index.html
@@ -83,6 +83,9 @@
           <a href="/appeal/final-comments/">Final comments for full planning (S78)</a>
         </li>
         <li>
+          <a href="/appeal/s78e/">Simplified full planning (S78E)</a>
+        </li>
+        <li>
           <a href="/appeal/lbc/">Listed building consent</a>
         </li>
         <li>
