--- a/app/views/manage/appeals/v8/appellant-submission-full.html
+++ b/app/views/manage/appeals/v8/appellant-submission-full.html
@@ -28,11 +28,95 @@
     <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--l">
   </div>
 
-  <div class="govuk-grid-column-full">
-    <!-- appeal submission -->
-    {% include "_includes/lpa/table-full-submission.html" %}
+  
 
-  </div>
+  <div class="govuk-grid-column-full">
+    <h2 class="govuk-heading-l">
+      Before you start
+    </h2>
+
+  <dl class="govuk-summary-list long-answers govuk-!-margin-bottom-9">
+  
+    
+    <div class="govuk-summary-list__row">
+      <dt class="govuk-summary-list__key govuk-!-width-one-third">
+        Which local planning authority (LPA) do you want to appeal against?	        
+      </dt>
+      <dd class="govuk-summary-list__value">
+        Bradford
+      </dd>
+      
+    </div>
+  
+
+  
+    <div class="govuk-summary-list__row">
+      <dt class="govuk-summary-list__key">
+        Did you receive an enforcement notice?	        
+      </dt>
+      <dd class="govuk-summary-list__value">
+       No
+      </dd>
+      
+    </div>
+  
+
+  
+    <div class="govuk-summary-list__row">
+      <dt class="govuk-summary-list__key">
+        What type of application is your appeal about?	
+      </dt>
+      <dd class="govuk-summary-list__value">
+        Full planning
+      </dd>
+      
+    </div>
+  
+
+  
+    <div class="govuk-summary-list__row">
+      <dt class="govuk-summary-list__key">
+        What date did you submit your application?	
+      </dt>
+      <dd class="govuk-summary-list__value">
+        11 July 2025
+      </dd>
+      
+    </div>
+  
+
+  
+    <div class="govuk-summary-list__row">
+      <dt class="govuk-summary-list__key">
+        Was your application granted or refused?	
+      </dt>
+      <dd class="govuk-summary-list__value">
+        Refused
+      </dd>
+      
+    </div>
+  
+    <div class="govuk-summary-list__row">
+      <dt class="govuk-summary-list__key">
+        What is the date on the decision letter from the local planning authority?	
+      </dt>
+      <dd class="govuk-summary-list__value">
+        4 July 2025
+      </dd>
+      
+    </div>
+  
+
+</dl>
 </div>
+
+
+<div class="govuk-grid-column-full">
+  <!-- appeal submission -->
+  {% include "_includes/appellant/table-full-submission.html" %}
+
+
+</div>
+
 
 {% endblock %}
