--- a/app/views/appeal/appeals/v2/appellant-submission-full.html
+++ b/app/views/appeal/appeals/v2/appellant-submission-full.html
@@ -23,11 +23,92 @@
       Appeal details
     </h1>
 
-  </div>
 
-  <div class="govuk-grid-column-full">
-    {% include "_includes/appellant/meta-full-appeal.html" %}
-    <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--l">
+    <div class="govuk-grid-column-full">
+      {% include "_includes/appellant/meta-full-appeal.html" %}
+      <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--l">
+    </div>
+
+
+
+    <h2 class="govuk-heading-l">
+      Before you start
+    </h1>
+
+    <dl class="govuk-summary-list long-answers govuk-!-margin-bottom-9">
+    
+      
+      <div class="govuk-summary-list__row">
+        <dt class="govuk-summary-list__key govuk-!-width-one-third">
+          Which local planning authority (LPA) do you want to appeal against?	        
+        </dt>
+        <dd class="govuk-summary-list__value">
+          Bradford
+        </dd>
+        
+      </div>
+    
+  
+    
+      <div class="govuk-summary-list__row">
+        <dt class="govuk-summary-list__key">
+          Did you receive an enforcement notice?	        
+        </dt>
+        <dd class="govuk-summary-list__value">
+         No
+        </dd>
+        
+      </div>
+    
+  
+    
+      <div class="govuk-summary-list__row">
+        <dt class="govuk-summary-list__key">
+          What type of application is your appeal about?	
+        </dt>
+        <dd class="govuk-summary-list__value">
+          Full planning
+        </dd>
+        
+      </div>
+    
+  
+    
+      <div class="govuk-summary-list__row">
+        <dt class="govuk-summary-list__key">
+          What date did you submit your application?	
+        </dt>
+        <dd class="govuk-summary-list__value">
+          11 July 2025
+        </dd>
+        
+      </div>
+    
+  
+    
+      <div class="govuk-summary-list__row">
+        <dt class="govuk-summary-list__key">
+          Was your application granted or refused?	
+        </dt>
+        <dd class="govuk-summary-list__value">
+          Refused
+        </dd>
+        
+      </div>
+    
+      <div class="govuk-summary-list__row">
+        <dt class="govuk-summary-list__key">
+          What is the date on the decision letter from the local planning authority?	
+        </dt>
+        <dd class="govuk-summary-list__value">
+          4 July 2025
+        </dd>
+        
+      </div>
+    
+  
+</dl>
+
   </div>
 
   <div class="govuk-grid-column-full">
